# Digital-Experience-Recovery-Agent

./: .env.example  .gitignore  .hermes.md  CONTRIBUTING.md  Case Study - Apex Global (1).docx  Dockerfile  README.md  SOUL.md  docker-compose.yml  nohup.out  pyproject.toml
app/: __init__.py  config.py  db.py  hermes_client.py  main.py  orchestration_guidance.py  schemas.py  security.py  tts.py
docs/: deployment-guide.md  monitoring-runbook.md  orchestration-guidance.md  product-definition.md  product-ux-rebuild-plan.md  project-corpus-lock.md  security-hardening-review.md  security-test-plan.md  ui-redesign-plan.md  ux-qa-report.md  ux-remediation-implementation-plan.md
docs/source/: README.md  inventory.json
frontend/: app.js  index.html  spheron-viewer.js  styles.css
presentation/: index.html  vercel.json
tests/: test_api_contracts.py  test_frontend_shell.py  test_orchestration_guidance.py  test_security_hardening.py
