[project]
name = "digital-experience-recovery-agent"
version = "0.1.0"
description = "Backend shell for the Digital Experience Recovery Agent recovery cockpit"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "docs*", "var*", "workspace-storage*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
